# turbine

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/turbine/: Cargo.toml
crates/turbine-bench/: Cargo.toml
crates/turbine-bench/benches/: cross_thread_transfer.rs  epoch_rotation.rs  lease_throughput.rs
crates/turbine-bench/src/: lib.rs
crates/turbine-bench/src/competitors/: bumpalo_pool.rs  bytes_pool.rs  crossbeam_pool.rs  mod.rs  sharded_slab.rs  slab_mutex.rs  vec_baseline.rs
crates/turbine-core/: Cargo.toml
crates/turbine-core/src/: config.rs  error.rs  gc.rs  lib.rs  types.rs
crates/turbine-core/src/buffer/: leased.rs  mod.rs  pinned.rs  pool.rs
crates/turbine-core/src/epoch/: arena.rs  clock.rs  manager.rs  mod.rs
crates/turbine-core/src/ring/: registration.rs
crates/turbine-core/src/transfer/: handle.rs
crates/turbine/src/: lib.rs
docs/: architecture.md  benchmarks.md  contributing.md  cross-thread-transfer.md  developer-guide.md  future.md  guide.md  integration.md
lore/: 20260306-0800-harden-adaptive-arenas.md  20260306-2041-harden-epoch-buffer.md  20260306-2349-harden-perf-optimize.md  20260306-competitive-landscape.md  20260306-epoch-buffer-rotation.md  20260307-1400-harden-flamegraph-binaries.md  20260307-2027-harden-hotpath-optimizations.md  20260308-0900-harden-flamegraph-optimizations.md  conventions.md
