[package]
name = "turbine-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
turbine-core = { path = "../turbine-core" }
slab = "0.4"
sharded-slab = "0.1"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
crossbeam-channel = "0.5"
bumpalo = "3"
bytes = "1"

pprof = { version = "0.14", features = ["flamegraph"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bin]]
name = "flamegraph_lease"

[[bench]]
name = "lease_throughput"
harness = false

[[bench]]
name = "epoch_rotation"
harness = false

[[bench]]
name = "cross_thread_transfer"
harness = false
